plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.attendify'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Utilities
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.16.1'
    implementation 'org.liquibase:liquibase-core'

    // SpringDoc OpenAPI (Swagger)
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0') {
        version { strictly '2.3.0' }
        exclude group: 'org.springframework' // Let Spring Boot manage Spring versions
    }
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-api:2.3.0') {
        version { strictly '2.3.0' }
        exclude group: 'org.springframework', module: 'spring-webmvc'
    }

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

configurations.all {
    resolutionStrategy {
        // Existing forced versions
        force 'org.springframework:spring-core:6.1.6'
        force 'org.springframework:spring-web:6.1.6'
        force 'org.springframework:spring-webmvc:6.1.6'
        force 'org.springframework:spring-beans:6.1.6'
        force 'org.springframework:spring-context:6.1.6'

        // Add this to handle Springdoc's internal POM
        eachDependency { DependencyResolveDetails details ->
            if (details.requested.group == 'org.springframework'
                    && details.requested.name == 'spring-webmvc') {
                details.useVersion '6.1.6'
                details.because 'Force consistent version for Springdoc compatibility'
            }
        }
    }
}